--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "http-status": "^1.5.0",
     "joi": "^17.6.0",
     "jsonwebtoken": "^8.5.1",
+    "nodemailer": "^6.7.2",
     "pg": "^8.7.3",
     "postgres": "^1.0.2",
     "sequelize": "^6.16.1",
