--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "crypto-js": "^4.1.1",
     "dotenv": "^16.0.0",
     "express": "^4.17.2",
+    "express-fileupload": "^1.3.1",
     "helmet": "^5.0.2",
     "http-status": "^1.5.0",
     "joi": "^17.6.0",
