--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "starlince",
   "license": "MIT",
   "dependencies": {
+    "@prisma/client": "^3.12.0",
     "crypto-js": "^4.1.1",
     "dotenv": "^16.0.0",
     "express": "^4.17.2",
@@ -28,6 +29,7 @@
     "winston": "^3.6.0"
   },
   "devDependencies": {
-    "nodemon": "^2.0.15"
+    "nodemon": "^2.0.15",
+    "prisma": "^3.12.0"
   }
 }
