--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,5 +10,15 @@ services:
       POSTGRES_USER: postgres
     volumes:
       - data:/data/db
+  rediscache:
+    image: redis:latest
+    restart: always
+    ports:
+      - '6379:6379'
+    command: redis-server --save 20 1 --loglevel warning --requirepass eYVX7EwVmmxKPCDmwMtyKVge8oLd2t81
+    volumes: 
+      - cache:/data
 volumes:
   data:
+  cache:
+    driver: local
