--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "nodemailer": "^6.7.2",
     "pg": "^8.7.3",
     "postgres": "^1.0.2",
+    "redis": "^4.2.0",
     "sequelize": "^6.16.1",
     "uuid": "^8.3.2",
     "winston": "^3.6.0"
