--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,4 @@
 /v1/src/config/config.json
 /v1/src/uploads/users/*
 /v1/src/uploads/tasks/*
-/v1/src/logs/projects/*
-/v1/src/logs/sections/*
-/v1/src/logs/tasks/*
+/v1/src/logs/*
